<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/position"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterXCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/defaultSize"
                        android:textSize="15sp" />

                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/y"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterYCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/zero"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/z"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterZCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/zero"
                        android:textSize="15sp" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/attributes"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xangle"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterXAngleCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/defaultXAngle"
                        android:textSize="15sp" />

                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yangle"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterYAngleCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/zero"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zangle"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterZAngleCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/defaultZAngle"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zoom_label"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterZoomCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@string/defaultZoom"
                        android:textSize="15sp" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/addCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="0dp"
        android:text="@string/add"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

</androidx.constraintlayout.widget.ConstraintLayout>