<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.component.MainActivity">

    <LinearLayout
        android:id="@+id/camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operations"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMove"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                android:text="@string/move"
                android:textSize="12sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TableLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterX"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:ems="10"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:textSize="15sp"
                        android:text="@string/zero" />

                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/y"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterY"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:ems="10"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:textSize="15sp"
                        android:text="@string/zero" />

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/z"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterZ"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="0.2"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:text="@string/zero" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRotate"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                android:text="@string/rotate"
                android:textSize="12sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TableLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ox"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterOX"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:ems="10"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:textSize="15sp"
                        android:text="@string/zero" />

                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oy"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterOY"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:ems="10"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:textSize="15sp"
                        android:text="@string/zero" />

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oz"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterOZ"
                        android:imeOptions="actionDone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="0.2"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:digits="0123456789-"
                        android:text="@string/zero" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/add"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/objectsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/objects_array"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.EditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonZoom"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/zoom"
                android:textSize="12sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterZoom"
                android:imeOptions="actionDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="0.2"
                android:textSize="15sp"
                android:inputType="number"
                android:text="@string/startFov" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/figure"
        app:layout_constraintStart_toEndOf="@+id/camera"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/main_camera" />

        <EditText
            android:id="@+id/mainCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/defaultSelectedItem"
            android:inputType="text"
            android:ems="10"
            android:textColor="@color/black"
            android:enabled="false"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:contentDescription="@string/iv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintWidth_percent="0.58" />

    <LinearLayout
        android:id="@+id/figure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/canvas"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objects_list"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/objectsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/activeItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/defaultSelectedItem"
                android:inputType="text"
                android:ems="10"
                android:textColor="@color/black"
                android:enabled="false"/>

        </LinearLayout>

        <Button
            android:id="@+id/deleteObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_object"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/clearObjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_objects"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textSize="12sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>